<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ViewAppoinment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bb"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".MainActivity"
            tools:layout_editor_absoluteX="-26dp">

        <EditText
                android:id="@+id/editText6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="XXXXXXXXXX"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/editText7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="190dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="XXXXXXXXXX"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/editText8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="280dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="XXXXXXXXXX"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/editText9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="380dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="XXXXXXXXXX"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/textView4"
                android:layout_width="74dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="84dp"
                android:text="@string/key7"
                android:textSize="18dp"
                app:layout_constraintEnd_toStartOf="@+id/editText6"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/textView3"
                android:layout_width="73dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="190dp"
                android:text="@string/key8"
                android:textSize="18dp"
                app:layout_constraintEnd_toStartOf="@+id/editText7"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/textView2"
                android:layout_width="76dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="280dp"
                android:text="@string/key9"
                android:textSize="18dp"
                app:layout_constraintEnd_toStartOf="@+id/editText8"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/textView"
                android:layout_width="79dp"
                android:layout_height="49dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="380dp"
                android:text="@string/key10"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/editText9"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <Button
                android:id="@+id/button4"
                android:layout_width="161dp"
                android:layout_height="66dp"
                android:layout_marginTop="600dp"
                android:background="@drawable/round"
                android:text="@string/key11"
                android:textSize="15dp"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintHorizontal_bias="0.13"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <Button
                android:id="@+id/button3"
                android:layout_width="161dp"
                android:layout_height="66dp"
                android:layout_marginTop="600dp"
                android:background="@drawable/round"
                android:text="@string/key12"
                android:textSize="15dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="234dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>